update metadata Added archival cover.

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: Woodland-Paths_66072
-_version: 0.1.0
+_version: 0.2.0
 contributor:
   illustrator:
     agent_name: Copeland, Charles
@@ -8,6 +8,9 @@ contributor:
     gutenberg_agent_id: '3033'
     url: http://www.gutenberg.org/2009/agents/3033
     wikipedia: https://en.wikipedia.org/wiki/Charles_Copeland_(illustrator)
+covers:
+- cover_type: archival
+  image_path: 66072-h/images/cover.jpg
 creator:
   author:
     agent_name: Packard, Winthrop
@@ -16,6 +19,8 @@ creator:
     gutenberg_agent_id: '35097'
     url: http://www.gutenberg.org/2009/agents/35097
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/66072#Woodland-Paths
 gutenberg_issued: '2021-08-16'
 gutenberg_type: Text
 identifiers:
